fixed element overlap on INHE tab on small screens by adding breakpoint

--- a/style-synch.css
+++ b/style-synch.css
@@ -62,3 +62,10 @@ h2 {
 body {
     font-family: Poppins;
 }
+
+@media (max-width: 404px) {
+    .col-custom-12 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
